# ics20-proxy

./: Cargo.toml  makefile
contracts/ics20_proxy/: Cargo.toml
contracts/ics20_proxy/src/: amount.rs  contract.rs  error.rs  ibc.rs  lib.rs  migrations.rs  msg.rs  state.rs
