[package]
name = "ics20_proxy"
version = "0.1.0"
authors = ["Jackson Swenson <jacksonswenson22@securesecrets.org>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
#shade-protocol = { path = "../../../shade/packages/shade_protocol", features = [
  #"storage_plus",
#  "utils",
#  "snip20",
#  "stargate",
#] }
#shade-protocol = { git = "https://github.com/securesecrets/shade", branch = "cosmwasm_v1_upgrade", features = [
#  "storage",
#  "storage_plus",
#  "utils",
#  "snip20",
#  "stargate",
#] }
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret", features = ["stargate"] }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm", commit = "1e05e7e" }
secret-storage-plus = { git = "https://github.com/securesecrets/secret-plus-utils", version = "0.13.4" }
# secret-toolkit = { version = "0.3" }

schemars = "0.8.9"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
#shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [ "multi-test" ] }
#shade-multi-test = { path = "../../packages/multi_test", features = ["ics20-proxy"] }
